--- a/index.html
+++ b/index.html
@@ -370,11 +370,11 @@
               </div>
               <div class="col-md-5">
                 <div class="speaker">
-                  <img src="images/program/battaglini.jpg" alt="Ruggero Basanisi">
+                  <img src="images/program/battaglini.jpg" alt="Chiara Battaglini">
                 </div>
-                <h4>Representational Similarity Analysis (TBD)</h4>
+                <h4>Representational Similarity Analysis HackLab</h4>
                 <h4><span>Chiara Battaglini (IUSS, Pavia)</span></h4>
-                <p>TBD</p>
+                <p> Hacking the brain’s inner map: from stimuli to individual patterns</p>
               </div>
             </div>
 
@@ -382,7 +382,7 @@
               <div class="col-md-2"><time>10:50</time></div>
               <div class="col-md-5">
                 <div class="speaker">
-                  <img src="images/program/pinelli.jpeg" alt="Ruggero Basanisi">
+                  <img src="images/program/pinelli.jpeg" alt="Fabio Pinelli">
                 </div>
                 <h4>Training: Going on with Python</h4>
                 <h4><span>Fabio Pinelli (IMT, Lucca)</span></h4>
@@ -390,11 +390,11 @@
               </div>
               <div class="col-md-5">
                 <div class="speaker">
-                  <img src="images/program/person.png" alt="Ruggero Basanisi">
+                  <img src="images/program/berganza.jpg" alt="Miguel Ibanez Berganza">
                 </div>
-                <h4>TBD</h4>
-                <h4><span>TBD</span></h4>
-                <p>TBD</p>
+                <h4>Inferring correlation and causation</h4>
+                <h4><span>Miguel Ibanez Berganza</span></h4>
+                <p>Inferring correlations, partial correlations, and higher-order interactions. </p>
               </div>
             </div>
 
@@ -547,7 +547,7 @@
               <div class="col-md-2"><time>15:30</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="images/program/coffee_break.gif" alt="Willow Trantow">
+                  <img src="images/program/coffee_break.gif" alt="COFFEEEEEE!">
                 </div>
                 <h4>Coffee Break<span></span></h4>
                 <p>Coffee Break will be served at 'La Pecora Nera'</p>
@@ -631,7 +631,7 @@
               <div class="col-md-2"><time>15:30</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="images/program/coffee_break.gif" alt="Willow Trantow">
+                  <img src="images/program/coffee_break.gif" alt="COFFEEEEEE!">
                 </div>
                 <h4>Coffee Break<span></span></h4>
                 <p>Coffee Break will be served at 'La Pecora Nera'</p>
@@ -715,7 +715,7 @@
               <div class="col-md-2"><time>15:30</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="images/program/coffee_break.gif" alt="Willow Trantow">
+                  <img src="images/program/coffee_break.gif" alt="COFFEEEEEE!">
                 </div>
                 <h4>Coffee Break<span></span></h4>
                 <p>Coffee Break will be served at 'La Pecora Nera'</p>
