--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
                   <img src="images/program/lunch.jpg" alt="Buon Appetito">
                 </div>
                 <h4>Lunch Break</h4>
-                <p>Lunch will be served at 'Marameo'</p>
+                <!-- <p>Lunch will be served at 'Marameo'</p> -->
               </div>
             </div>
 
@@ -528,7 +528,7 @@
                   <img src="images/program/lunch.jpg" alt="Buon Appetito">
                 </div>
                 <h4>Lunch Break</h4>
-                <p>Lunch will be served at 'Marameo'</p>
+                <!-- <p>Lunch will be served at 'Marameo'</p> -->
               </div>
             </div>
 
@@ -612,7 +612,7 @@
                   <img src="images/program/lunch.jpg" alt="Buon Appetito">
                 </div>
                 <h4>Lunch Break</h4>
-                <p>Lunch will be served at 'Marameo'<p>
+                <!-- <p>Lunch will be served at 'Marameo'<p> -->
               </div>
             </div>
 
@@ -696,7 +696,7 @@
                   <img src="images/program/lunch.jpg" alt="Buon Appetito">
                 </div>
                 <h4>Lunch Break</h4>
-                <p>Lunch will be served at 'Marameo'</p>
+               <!--  <p>Lunch will be served at 'Marameo'</p> -->
               </div>
             </div>
 
