updated contributors section

--- a/index.html
+++ b/index.html
@@ -147,27 +147,27 @@
 
         <div class="row align-items-center justify-content-center">
 
-          <div class="col-xl-2 col-md-3 col-6 client-logo">
+          <div class="col-xl-3 col-md-3 col-6 client-logo">
             <a href="https://next-generation-eu.europa.eu/index_it" target="_blank">
-              <img src="images/contributors/IT_EU_alpha.png" class="img-fluid" alt="NextGenerationEU">
+              <img src="images/contributors/NGeu_blu.png" class="img-fluid" alt="NextGenerationEU">
             </a>
           </div>
 
-          <div class="col-xl-2 col-md-3 col-6 client-logo">
+          <div class="col-xl-3 col-md-3 col-6 client-logo">
             <a href="https://www.mur.gov.it/it" target="_blank">
-              <img src="images/contributors/LOGO_UniversitaRicerca_alpha.png" class="img-fluid" alt="MUR">
+              <img src="images/contributors/ministero_blu.png" class="img-fluid" alt="MUR">
             </a>
           </div>
 
-          <div class="col-xl-2 col-md-3 col-6 client-logo">
+          <div class="col-xl-3 col-md-3 col-6 client-logo">
             <a href="https://www.italiadomani.gov.it/content/sogei-ng/it/it/home.html" target="_blank">
-              <img src="images/contributors/italiadomani_alpha.png" class="img-fluid" alt="ItaliaDomani">
+              <img src="images/contributors/italia-domani_blu.png" class="img-fluid" alt="ItaliaDomani">
             </a>
           </div>
 
-          <div class="col-xl-2 col-md-3 col-6 client-logo">
+          <div class="col-xl-3 col-md-3 col-6 client-logo">
             <a href="https://educatingfuturecitizens.com/" target="_blank">
-              <img src="images/contributors/efc.png" class="img-fluid" alt="educatingfuturecitizens" width="200">
+              <img src="images/contributors/efc-logo_blu.png" class="img-fluid" alt="educatingfuturecitizens">
             </a>
           </div>
 
@@ -278,9 +278,21 @@
           </div>
 
         </div>
+
       </div>
 
     </section><!-- End About Section -->
+
+    <!-- ======= Stop war, Free Ukraine, Free Palestine Section ======= -->
+    <section style="background-color: black; padding: 15px">
+      <div>
+          <h5 style="color: white; display: flex; align-items: center; justify-content: center;flex-direction: column; text-align: center">
+            The BrainHack Lucca is an event that celebrates inclusivity, promotes cooperation over competition, and upholds the ethical principles of international humanitarian law. 
+            <br>
+            As such, BrainHack Lucca firmly rejects all ongoing wars and acts of genocide.
+          </h5>
+      </div>
+    </section>
 
     <!-- ======= Schedule Section ======= -->
     <section id="schedule" class="section-with-bg">
