--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
     <section style="background-color: black; padding: 15px">
       <div>
           <h5 style="color: white; display: flex; align-items: center; justify-content: center;flex-direction: column; text-align: center">
-            The BrainHack Lucca is an event that celebrates inclusivity, promotes cooperation over competition, and upholds the ethical principles of international humanitarian law. 
+            The BrainHack Lucca celebrates inclusivity, promotes cooperation over competition, and upholds the ethical principles of international humanitarian law. 
             <br>
             As such, BrainHack Lucca firmly rejects all ongoing wars and acts of genocide.
           </h5>
