--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
                   <img src="images/program/person.png" alt="Ruggero Basanisi">
                 </div>
                 <h4>TBD</h4>
-                <h4><span>TBD</span></h4>
+                <h4><span>Monica Paoletti (SISSA, Trieste)</span></h4>
                 <p>TBD</p>
               </div>
             </div>
@@ -581,11 +581,11 @@
               <div class="col-md-2"><time>17:30</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="images/program/person.png" alt="Ruggero Basanisi">
+                  <img src="images/program/marinazzo.jpg" alt="Daniele Marinazzo">
                 </div>
-                <h4>TBD</h4>
-                <h4><span>TBD</span></h4>
-                <p>TBD</p>
+                <h4>Connectivity and dynamics</h4>
+                <h4><span>Daniele Marinazzo (Universiteit Gent, Ghent)</span></h4>
+                <p>Surprise and variance reduction</p>
               </div>
             </div>
 
@@ -831,7 +831,9 @@
             <div class="register-btn align-items-center justify-content-center d-flex">
               <!-- <div class="icon align-items-left"><a href="" target="_blank"><i class="bi bi-card-checklist"></i></a></div> -->
               <div class="d-flex flex-column align-items-center">
-                <h4 class="title reg-btn" title="Registration is now open!"><a href="https://forms.gle/zBVooM7QRqPjrfkr9" target="_blank" class="stretched-link" style='background-color: #002039'>Register</a></h4>
+                <h4 class="title" title="Registration is now open!">
+                  <a href="https://forms.gle/zBVooM7QRqPjrfkr9" target="_blank" class="stretched-link" style='background-color: #002039'>Register</a>
+                </h4>
                 <!-- <p class="description">Register now using the google form.</p> -->
                 <!-- <p class="description">There are still <b>3 places available!</b></p> -->
                 <p class="description">Registration <b>is now open.</b></p>
@@ -841,7 +843,9 @@
 
           <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="100">
             <div class="register-item align-items-center justify-content-center d-flex">
-              <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div>
+              <div class="icon flex-shrink-0">
+                <i class="bi bi-card-checklist"></i>
+              </div>
               <div>
                 <h4 class="title">Participants' checklist</h4>
                 <p class="description">In order to facilitate the participation to first day's training sessions, participants are recommended to follow these few preliminar steps:
@@ -849,7 +853,8 @@
                     <li><i class="bi bi-check"></i><p>Install <a href="https://git-scm.com/downloads" target="_blank">git</a> and make a <a href="https://github.com/" target="_blank">GitHub</a> account</p></li>
                     <li><i class="bi bi-check"></i><p>Install Anaconda (<a href="https://www.anaconda.com/download" target="_blank">full</a> or <a href="https://docs.conda.io/projects/miniconda/en/latest/" target="_blank">mini</a> version)</p></li>
                     <li><i class="bi bi-check"></i><p>Install an IDE (<a href="https://www.spyder-ide.org/" target="_blank">Spyder</a>, <a href="https://www.jetbrains.com/pycharm/">PyCharm Community</a> or <a href="https://code.visualstudio.com/">VisualStudio Code</a>)</p></li>
-                  </ul></p>
+                  </ul>
+                </p>
               </div>
             </div>
           </div>
