--- a/index.html
+++ b/index.html
@@ -667,9 +667,9 @@
                 <div class="speaker">
                   <img src="images/program/barattieri_dsp.jpg" alt="Chiara Barattieri di San Pietro">
                 </div>
-                <h4>Distributional semantics & NLP (TBD)</h4>
+                <h4>NLP meets the Clinic</h4>
                 <h4><span>Chiara Barattieri di San Pietro (IUSS, Pavia)</span></h4>
-                <p>TBD</p>
+                <p>A primer on Distributional Semantics and other Natural Language Processing techniques for clinical studies</p>
               </div>
             </div>
 
