--- a/index.html
+++ b/index.html
@@ -433,11 +433,11 @@
               </div>
               <div class="col-md-5">
                 <div class="speaker">
-                  <img src="images/program/person.png" alt="Ruggero Basanisi">
+                  <img src="images/program/paoletti.jpg" alt="Monica Paoletti">
                 </div>
-                <h4>TBD</h4>
+                <h4>Inference Methods for Virtual Brain Models</h4>
                 <h4><span>Monica Paoletti (SISSA, Trieste)</span></h4>
-                <p>TBD</p>
+                <p>Transitioning from Simulation-Based Inference to Bayesian Inference</p>
               </div>
             </div>
 
@@ -472,7 +472,19 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-4"><time>15:30</time></div>
+              <div class="col-md-4"><time>15:00</time></div>
+              <div class="col-md-8">
+                <div class="speaker">
+                  <img src="images/program/pirri.jpg" alt="Anna Pirri Valentini">
+                </div>
+                <h4>TBD</h4>
+                <h4><span>Anna Pirri Valentini (IMT, Lucca)</span></h4>
+                <p>TBD</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-4"><time>16:00</time></div>
               <div class="col-md-8">
                 <div class="speaker">
                   <img src="images/program/coffee_break.gif" alt="COFFEEEEEE">
@@ -483,7 +495,7 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-4"><time>16:00</time></div>
+              <div class="col-md-4"><time>16:30</time></div>
               <div class="col-md-8">
                 <div class="speaker">
                   <img src="images/program/bortoletto.jpg" alt="Marta Bortoletto">
