--- a/index.html
+++ b/index.html
@@ -415,9 +415,9 @@
                 <div class="speaker">
                   <img src="images/program/berganza.jpg" alt="Miguel Ibanez Berganza">
                 </div>
-                <h4>Inferring correlation and causation</h4>
+                <h4>Inferring Correlation and Causation</h4>
                 <h4><span>Miguel Ibanez Berganza</span></h4>
-                <p>Inferring correlations, partial correlations, and higher-order interactions. </p>
+                <p>Inferring correlations, partial correlations, and higher-order interactions</p>
               </div>
             </div>
 
@@ -467,7 +467,7 @@
                 </div>
                 <h4>FAIR enough</h4>
                 <h4><span>Vittorio Iacovella (UniTrento, Trento)</span></h4>
-                <p>Fine-tuning your research outputs to foster reproducibility.</p>
+                <p>Fine-tuning your research outputs to foster reproducibility</p>
               </div>
             </div>
 
@@ -477,9 +477,9 @@
                 <div class="speaker">
                   <img src="images/program/pirri.jpg" alt="Anna Pirri Valentini">
                 </div>
-                <h4>TBD</h4>
+                <h4>Copyright, Copyleft, and Open Source</h4>
                 <h4><span>Anna Pirri Valentini (IMT, Lucca)</span></h4>
-                <p>TBD</p>
+                <p>Exploring Regulatory Challenges in the Age of Artificial Intelligence</p>
               </div>
             </div>
 
