updated program and project image

--- a/index.html
+++ b/index.html
@@ -460,7 +460,19 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-4"><time>14:00</time></div>
+              <div class="col-md-4"><time>13:50</time></div>
+              <div class="col-md-8">
+                <div class="speaker">
+                  <img src="images/program/molino.png" alt="Anna Molino">
+                </div>
+                <h4>Open Access @ IMT Library</h4>
+                <h4><span>Anna Molino (IMT, Lucca)</span></h4>
+                <p>Current Services and Future Perspectives</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-4"><time>14:10</time></div>
               <div class="col-md-8">
                 <div class="speaker">
                   <img src="images/program/iacovella.png" alt="Vittorio Iacovella">
@@ -472,7 +484,7 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-4"><time>15:00</time></div>
+              <div class="col-md-4"><time>15:10</time></div>
               <div class="col-md-8">
                 <div class="speaker">
                   <img src="images/program/pirri.jpg" alt="Anna Pirri Valentini">
@@ -484,7 +496,7 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-4"><time>16:00</time></div>
+              <div class="col-md-4"><time>16:10</time></div>
               <div class="col-md-8">
                 <div class="speaker">
                   <img src="images/program/coffee_break.gif" alt="COFFEEEEEE">
