--- a/index.html
+++ b/index.html
@@ -1057,39 +1057,40 @@
         <hr>
 
         <!--Project 3-->
-        <!-- <div class="row gy-4 align-items-stretch justify-content-between projects-item ">
+        <div class="row gy-4 align-items-stretch justify-content-between projects-item ">
           <div class="col-lg-5 d-flex align-items-center projects-img-bg" data-aos="zoom-out">
             <img src="images/projects/project3.png" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-6 d-flex justify-content-center flex-column" data-aos="fade-up">
-            <h3><a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/10" target="_blank">NeuroInfer and Database update</a></h3>
-            <p>By <b>Davide Coraci</b>, Matteo Lionello & Sara Mazzuccato</p>
+            <h3><a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/18" target="_blank">The Donnie Darko Project: Analysis of Human and Artificial Target-Tracking Trajectories</a></h3>
+            <p>By <a href="https://github.com/janluca91" target="_blank"><b>Gianluca Maraschio</b>, Francesco Biancalani, Jie Fu & Giorgio Stefano Gnecco</p>
             <a class="btn btn-get-started align-self-start" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_prj3">Description</a>
 
             <div class="collapse" id='collapse_prj3'>
               <p>
                 <br>
-                NeuroInfer (NI) is a software to support neuroscientists' inference on fMRI data. It implements a Bayesian approach and it is currently based on a dataset of more than 14,000 fMRI studies (shared with NeuroSynth).
-                The aim of the project is to update the database and, in particular, define a pipeline for extracting relevant information from the texts of fMRI studies (i.e., terms and coordinates of brain activation).
+                The project analyzes human- and machine-generated trajectories in a target-tracking task.
+                Part one evaluates how well human participants can distinguish real human trajectories (collected via the TickTacking interface) from human-like trajectories produced by an MPC algorithm (Masti et al., 2025). The goal is to assess the current effectiveness of the MPC model and identify whether further refinements are needed. A possible extension replaces the human classifier with an artificial one, using misclassification pressure—GAN-style—to optimize MPC hyperparameters.
+                If time permits, part two explores extending TickTacking into a tool for visualizing and learning rhythmic patterns in music performance. By mapping the interface to piano keys and comparing a “target” (ideal) trajectory with repeated “follower” performances, we aim to test whether repeated practice drives convergence between the two, indicating a measurable learning effect relevant for reproducible musical execution.
                 <br>
                 <b>Goals for the BrainHack:</b>
                 <ul>
-                  <li>Check the current version of NeuroInfer</li>
-                  <li>Define a flowchart for processing texts of fMRI studies</li>
-                  <li>Develop a pipeline to process texts</li>
+                  <li>Results of Data Analysis</li>
+                  <li>Possible Developments of the TickTacking Interface</li>
                 </ul>
                 <b>Contributors' skills:</b>
                 <br>
                 <ul>
-                  <li>Python (basics)</li>
-                  <li>Experience with API would be cool!</li>
+                  <li>Data Analysis</li>
+                  <li>Statistics</li>
+                  <li>Computer Programming</li>
                 </ul>
               </p>
             </div>
 
           </div>
-        </div>  --><!-- Project Item LEFT -->
+        </div>  <!-- Project Item LEFT -->
 
         <hr>
 
@@ -1131,9 +1132,9 @@
           <div class="col-lg-5 d-flex align-items-center projects-img-bg" data-aos="zoom-out">
             <img src="images/projects/project4.png" class="img-fluid" alt="">
           </div>
-        </div> --> <!-- Project Item RIGHT -->
+        </div> 
 
-        <hr>
+        <hr> -->  <!-- Project Item RIGHT -->
 
         <!--Project 5-->
         <!-- <div class="row gy-4 align-items-stretch justify-content-between projects-item ">
@@ -1175,9 +1176,9 @@
             </div>
 
           </div>
-        </div> --> <!-- Project Item LEFT -->
+        </div> 
 
-        <hr>
+        <hr> --> <!-- Project Item LEFT -->
 
         <!--Project 6-->
          <!-- <div class="row gy-4 align-items-center projects-item">
@@ -1217,9 +1218,9 @@
           <div class="col-lg-5 d-flex align-items-center projects-img-bg" data-aos="zoom-out">
             <img src="images/projects/project6.jpg" class="img-fluid" alt="">
           </div>
-        </div> --> <!-- Project Item RIGHT -->
+        </div> 
 
-        <hr>
+        <hr> -->  <!-- Project Item RIGHT -->
 
         <!--Project 7-->
         <!-- <div class="row gy-4 align-items-stretch justify-content-between projects-item ">
@@ -1274,9 +1275,9 @@
             </div>
 
           </div>
-        </div> --> <!-- Project Item LEFT -->
+        </div> 
 
-        <hr>
+        <hr> --> <!-- Project Item LEFT -->
 
         <!--Project 8-->
          <!-- <div class="row gy-4 align-items-center projects-item">
@@ -1320,9 +1321,9 @@
           <div class="col-lg-5 d-flex align-items-center projects-img-bg" data-aos="zoom-out">
             <img src="images/projects/project_generic.png" class="img-fluid" alt="">
           </div>
-        </div> --> <!-- Project Item RIGHT -->
+        </div> 
 
-        <hr>
+        <hr> -->  <!-- Project Item RIGHT -->
 
       </div>
 
